2003-04-05  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (tell_client): add fflush; seems to help at least on
	Solaris.

	* dccserver.c (handle_input): return -1 if stdin closed, or user
	entered "quit".
	(main): exit if -1 returned by handle_input.
	Idea from Rudolf Polzer.

2003-04-04  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* getaddrinfo.h: new file, from Dieter Baron.
	* getaddrinfo.c: new file, from Dieter Baron.
	* configure.ac: use getaddrinfo.c, if needed.
	* dccsend.c: include getaddrinfo.h, if needed.
	* Makefile.am (EXTRA_DIST): add getaddrinfo.[ch].
	* COPYING: add license for getaddrinfo.[ch].

	* dccserver.c (handle_connection): add fflush(stderr).
	(converse_with_client): here too.

	* dccserver.c (get_file): add more verbose error messages in case
	we already have the complete file, or more bytes than client is
	willing to send.

	* configure.ac: use errx if needed.
	* errx.c (errx): new file.
	* COPYING: mention errx.c.
	* Makefile.am (EXTRA_DIST): add errx.c.

	* warnx.c (warnx): use fputs instead of fprintf.

	* dccserver.c (get_file): allow files of size 0 to be resumed.
	(get_file): fix two messages.

2003-04-03  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (main): add minimal port verification.

	* dccserver.c (get_file, display_remote_line)
	(converse_with_client, communicate_with_client): sprinkle child
	IDs in more output messages. Mostly from Rudolf Polzer.

	* dccserver.c (get_file): correct output of new bytes in one case.

	* dccserver.mdoc: mention how to run dccserver in an irssi
	window. From Rudolf Polzer.
	* dccserver.man: regen.

2003-04-02  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (parse_get_line): use strip_path to remove path
	components from filename. Requested by Athanasius.
	(strip_path): new function.

	* THANKS: new file.

	* Makefile.am (EXTRA_DIST): remove README; should be included
	automatically.

2003-04-01  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
